# ReviewAnalyzer

./: .dockerignore  .flake8  .gitignore  Dockerfile_backend  Dockerfile_nginx  README.md  deploy.sh  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt  test.js  test.txt
analytics/: manager.py  tasks.py
analytics/constants/: __init__.py  enums.py
analytics/sentiment/: cleaning.py  daemon.py
analytics/utils/: plotting.py
applications/: urls.py
applications/admin/: __init__.py  application.py  review.py
applications/filters/: custom.py  review.py
applications/migrations/: 0001_initial.py  0002_initial.py  0003_remove_review_sentiment_score.py  0004_application_description.py  0005_searchhistory_uc_search_history_user_app_created_at.py
applications/models/: __init__.py  application.py  review.py  search_history.py
applications/serializers/: application.py
applications/utils/: validators.py
applications/views/: __init__.py  analytics.py  application.py  recent_searches.py
authentication/: admin.py  backends.py  tasks.py  urls.py
authentication/migrations/: 0001_initial.py  0002_alter_user_email.py
authentication/models/: __init__.py  email_confirmation_token.py  user.py
authentication/serializers/: login.py  password_change.py  password_reset_confirm.py  user.py
authentication/views/: __init__.py  email_confirm.py  login.py  logout.py  password_change.py  password_reset.py  signup.py  (+1 more)
common/: models.py
config/: asgi.py  celery_beat_schedule.py  constants.py  settings.py  test_a.py  urls.py  wsgi.py
scraping/: tasks.py
(+32 files in other folders)
