[tool.poetry]
name = "reviewanalyzer"
version = "0.1.0"
description = ""
authors = ["Reyek <zreek2001@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "2.0.0"
transformers = "^4.29.2"
emoji = "^2.2.0"
contractions = "^0.1.73"
beautifulsoup4 = "^4.12.2"
nltk = "^3.8.1"
django = "^4.2.1"
lxml = "^4.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
